# ChangeLog for dev-util/cogito
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cogito/ChangeLog,v 1.60 2008/05/12 15:49:19 maekke Exp $

  12 May 2008; Markus Meier <maekke@gentoo.org> cogito-0.18.2.ebuild:
  amd64 stable, bug #215381

  12 Apr 2008; nixnut <nixnut@gentoo.org> cogito-0.18.2.ebuild:
  Stable on ppc wrt bug 215381

  02 Apr 2008; Raúl Porcel <armin76@gentoo.org> cogito-0.18.2.ebuild:
  alpha/ia64/sparc stable wrt #215381

  01 Apr 2008; Christian Faulhammer <opfer@gentoo.org> cogito-0.18.2.ebuild:
  don't install COPYING file

  01 Apr 2008; Christian Faulhammer <opfer@gentoo.org> cogito-0.18.2.ebuild:
  stable x86, bug 215381

  30 Mar 2008; Markus Rothe <corsair@gentoo.org> cogito-0.18.2.ebuild:
  Stable on ppc64; bug #215381

  14 Jan 2008; Fabian Groffen <grobian@gentoo.org> cogito-0.17.3.ebuild,
  cogito-0.18.2.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  06 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org> -cogito-0.18.ebuild,
  -cogito-0.18.1.ebuild:
  QA: Clean unused versions.

*cogito-0.18.2 (04 Dec 2006)

  04 Dec 2006; Fernando J. Pereda <ferdy@gentoo.org> +cogito-0.18.2.ebuild:
  Version bump. Fixes bug #156350

*cogito-0.18.1 (14 Nov 2006)

  14 Nov 2006; Fernando J. Pereda <ferdy@gentoo.org> -cogito-0.16.2.ebuild,
  -cogito-0.17.4.ebuild, +cogito-0.18.1.ebuild:
  New upstream version. Remove old ones.

*cogito-0.18 (29 Sep 2006)

  29 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> +cogito-0.18.ebuild:
  New upstream version.

*cogito-0.17.4 (24 Sep 2006)

  24 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> +cogito-0.17.4.ebuild:
  New upstream version.

  04 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org>
  -files/cogito-test-fix-0.17.2.patch, -cogito-0.16.4.ebuild,
  -cogito-0.17.ebuild, -cogito-0.17.2.ebuild:
  Cleanup old versions.

  19 Aug 2006; Torsten Veller <tove@gentoo.org> cogito-0.17.3.ebuild:
  Stable on x86 (bug #143714)
