@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
-<maintainer>
-	<email>r3pek@gentoo.org</email>
-</maintainer>
-<maintainer>
-	<email>ferdy@gentoo.org</email>
-	<name>Fernando J. Pereda</name>
-</maintainer>
+	<herd>no-herd</herd>
+	<maintainer>
+		<email>ferdy@gentoo.org</email>
+		<name>Fernando J. Pereda</name>
+	</maintainer>
 </pkgmetadata>
